# ViconFrankaIntegration

./: CMakeLists.txt  package.xml
launch/: manipulator_node_real.launch  manipulator_node_real_grasp.launch  manipulator_node_sim.launch  manipulator_node_sim_grasp.launch  test_real.launch  test_sim.launch
python_examples/kandai/: main.py
src/: '  .vicon_franka_integration_node.cpp.swp  .vicon_pick_place_node.cpp.swp  com_node.cpp  manipulator_node.cpp  planning_node.cpp  vicon_franka_integration_node.cpp
srv/: PlanningQuery_srv.srv
